Fixed issue where page could scroll 8px left and right due to the y-axis scrollbar.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,6 +51,7 @@ body {
 
 html {
   overflow-y: overlay;
+  overflow-x: hidden;
 }
 
 .container {
